fixes letter spacing

--- a/css/custom.css
+++ b/css/custom.css
@@ -113,7 +113,7 @@ a {
 }
 
 p, h2, h3, h4, h5, h6 {
-  letter-spacing: 0;
+  letter-spacing: 0!important;
 }
 
 p {
